--- a/style.css
+++ b/style.css
@@ -1,17 +1,58 @@
-.flex-container {
-    height: 100vh;
-    display: flex; 
-    justify-content: center;
-    align-items: center;
+.container {
+    margin-top: 120px;
 }
 
-
-
-.container{
-    font-family: arial,sans-serif;
+.index-links{
+    text-align: right;
+    margin-right: 25px;
+    margin-top: 30px;
+    font: 13px Arial,sans-serif;
 }
 
-.google-advance{
+.google-logo{
     display: block;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+
+.mainsearch{
+    display: block;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 10px 30px 10px 30px; /*top right bottom left*/
+    border: 1px solid #dfe1e5;
+}
+
+.mainsearch:hover{
+    border-color: #a0a0a0 #b9b9b9 #b9b9b9 #b9b9b9;
+}
+
+.button-wrapper{
+    display: flex;
+    justify-content: center;
+}
+
+.button{
+    margin-top: 30px;
+    background: #f8f9fa;
+    margin-left: 6px;
+    margin-right: 6px;
+    border: none;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 6px;
+    font-size: 14px;
+}
+
+.button:hover{
+    opacity: .8;
 }
 
